--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 <!-- this is the react library which is used for dom  operations  -->
 <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 
-<script src="./App.js">
+<!-- we dont want use of cdn links after install react packages -->
+
+<script type="module"  src="./App.js">
 </script>
 </body>
 </html>
