--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
    
    <!-- these are the scripts which include all react files  (cdn files) -->
    <!-- this is core react file  -->
-<script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>  
+<!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>   -->
 <!-- this is the react library which is used for dom  operations  -->
-<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+<!-- <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script> -->
 
 <!-- we dont want use of cdn links after install react packages -->
 
